# mpatrol

./: AUTHORS  ChangeLog  EXAMPLES  FAQ  INSTALL  Makefile.am  Makefile.in  NEWS  NOTES  README  README.windows  THANKS  TODO  VERSION  aclocal.m4  configure  configure.ac  configure.h.in  mpalloc.pc.in  mpatrol-mt.pc.in  mpatrol.pc.in
config/: bin.am  bin.in  configure  configure.h.in  configure.in  doc.am  doc.in  extra.am  extra.in  images.am  images.in  man.am  man.in  src.am  src.in  tools.am  tools.in  top.am  top.in  tsrc.am  tsrc.in
doc/: .cvsignore  Makefile  README  mpatrol.guide  mpatrol.html  mpatrol.info  mpatrol.texi  mpatrol.txt  refcard.tex  source.tex  texinfo.tex
extra/: .cshrc  .gdbinit  .profile  cc1.out  collect2.out  cpp.out  gcc.out  magic  mpatrol.m4  test.out
m4/: mp_tests.m4
man/: Makefile  README
man/cat1/: .cvsignore  hexwords.1  memleak.1  mleak.1  mpatrol.1  mpedit.1  mprof.1  mpsym.1  mptrace.1
man/cat3/: .cvsignore  libmpalloc.3  libmpatrol.3  mpatrol.3
man/dvi/: .cvsignore
man/html/: .cvsignore  hexwords.html  libmpalloc.html  libmpatrol.html  mleak.html  mpatrol.html  mpedit.html  mprof.html  mpsym.html  mptrace.html
man/man1/: hexwords.1  memleak.1  mleak.1  mpatrol.1  mpedit.1  mprof.1  mpsym.1  mptrace.1
man/man3/: libmpalloc.3  libmpatrol.3  mpatrol.3
man/pdf/: .cvsignore
man/ps/: .cvsignore
pkg/auto/: .cvsignore  build  cleanup  setup
pkg/debian/: .cvsignore  build  changelog  copyright  doc-base  rules
pkg/interix/: .cvsignore  build  pkglist
pkg/lha/: .cvsignore  build  mpatrol.readme
pkg/lsm/: mpatrol.lsm
pkg/pkg/: .cvsignore  build  pkginfo  prototype
pkg/rpm/: .cvsignore  build  mpatrol.spec
pkg/sdux/: .cvsignore  build  mpatrol.psf
pkg/tar/: .cvsignore  build
pkg/zip/: .cvsignore  build.bat
src/: Makefile.am  Makefile.in  addr.c  addr.h  alloc.c  alloc.h  config.h  configure.h  cplus.c  diag.c  diag.h  getopt.c  getopt.h  graph.c  graph.h  heap.c  heap.h  info.c  info.h  inter.c  inter.h  leaktab.c  leaktab.h  library.c  library2.c  list.c  list.h  machine.c  machine.h  malloc.c  memleak.c  memory.c  memory.h  mleak.c  mpalloc.c  mpalloc.h  mpatrol.c  mpatrol.h  mpcalloc.c  mpdebug.h  (+34 more)
src/lib/: Makefile.am  Makefile.in  alloc.c  config.h  dbmalloc.c  dbmalloc.h  diag.c  dmalloc.c  dmalloc.h  heapdiff.c  heapdiff.h  info.c  inter.c  main.c  main2.c  memory.c  mgauge.c  mgauge.h  mpalloc.c  mpatrol.h.in  mpcalloc.c  mprealloc.c  mtrace.c  mtrace.h  option.c  stack.c  symbol.c  version.h.in
src/tests/: Makefile.am  Makefile.in  mpatrol_suite.c  mpatrol_suite.h  mpatrol_test1.c
tests/fail/: test1.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
tests/pass/: test1.c  test10.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
tests/profile/: test1.c  test2.c
tests/tutorial/: test1.c  test2.c  test3.c
tools/: README  dbmalloc.c  dbmalloc.h  dmalloc.c  dmalloc.h  heapdiff.c  heapdiff.h  mgauge.c  mgauge.h  mtrace.c  mtrace.h
valgrind/: Makefile  TODO  valgrind.c  valgrind_dll.c  valgrind_test.c
valgrind/win32/: valgrind.sln  valgrind.vcproj  valgrind_dll.vcproj  valgrind_test.vcproj
