dnl mpatrol
dnl A library for controlling and tracing dynamic memory allocations.
dnl Copyright (C) 1997-2001 Graeme S. Roy <graeme.roy@analog.com>
dnl
dnl This library is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU Library General Public
dnl License as published by the Free Software Foundation; either
dnl version 2 of the License, or (at your option) any later version.
dnl
dnl This library is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl Library General Public License for more details.
dnl
dnl You should have received a copy of the GNU Library General Public
dnl License along with this library; if not, write to the Free
dnl Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
dnl MA 02111-1307, USA.


dnl Process this file with autoconf to produce a configure script


dnl $Id: configure.in,v 1.6 2001-09-20 23:27:48 graeme Exp $


dnl Initialisation.

AC_REVISION($Revision: 1.6 $)
AC_INIT(src/mpatrol.h)
AM_CONFIG_HEADER(configure.h)
AM_INIT_AUTOMAKE(mpatrol, 1.4.8)


dnl Checks for programs.

AC_PROG_CC
AM_PROG_LIBTOOL


dnl Checks for libraries.


dnl Checks for header files.


dnl Checks for typedefs, structures, and compiler characteristics.


dnl Checks for library functions.

AC_FUNC_MMAP


dnl Checks for system services.


dnl Finalisation.

AC_OUTPUT(Makefile
          bin/Makefile
          doc/Makefile
          doc/images/Makefile
          extra/Makefile
          man/Makefile
          src/Makefile
          tsrc/Makefile
          tools/Makefile)
